# continuum

./: .cascade_brief_alibaba_deploy.md  .cascade_brief_upgrade.md  .cascade_impl_prompt.txt  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prd.md  pyproject.toml  render.yaml
apps/web/: index.html
demo_video/: CHAPTERS.md  QA_REPORT.md  README.md
docs/: ALIBABA_DEPLOYMENT_UNAVAILABLE.txt  ALIBABA_DEPLOY_GUIDE.md  ALIBABA_FREE_TIER_PROGRESS.md  DEMO_VIDEO_PIPELINE.md  DEVPOST_SUBMIT_PACKET.md  FREE_HOSTING_OPTIONS.md  HACKATHON_SUBMIT.md  MEMORY_SAAS_ASSESSMENT.md  OVERNIGHT_STATUS.md  PROOF_OF_ALIBABA_DEPLOYMENT.md  RENDER_DEVPOST_STATUS.md  YOUTUBE_UPLOAD_RESULT.md  _overnight_free_attempts.json  architecture.md  architecture.mmd
docs/ADR/: 0001-sqlite-phase-a.md
docs/research/: AGENT_MEMORY_SURVEY.md  IMPROVEMENT_PLAN.md  LOOP3_NOTES.md  LOOP4_NOTES.md  LOOP5_NOTES.md  MEMORY_ARCHITECTURE_V2.md
docs/screenshots/: README.md
evals/: README.md  browser_ui_test.py  run_smoke.py  run_suite.py
evals/continuum_eval/: __init__.py  __main__.py
evals/fixtures/: acme_session_a_b.json  adversarial_injection.json  cloud_skyline_sla.json  consulting_brightside.json  ecommerce_shoply_vip.json  edu_learnly.json  fintech_paymint.json  healthcare_clinic_prefs.json  hr_peoplefirst.json  insurance_shieldco.json  itsm_nexus_sla.json  legal_northwind.json  locomo_adversarial_stale.json  locomo_as_of_current.json  locomo_as_of_point_in_time.json  (+15 more)
infra/: README.md
scripts/: run_verify.py
tests/: README.md  conftest.py
(+53 files in other folders)
