[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum"
version = "0.2.0"
description = "Continuum — Memory Operating System for agents (Qwen Cloud Hackathon Track 1)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Continuum Team" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
]
mcp = ["mcp>=1.0"]
postgres = ["sqlalchemy>=2.0"]

[project.scripts]
continuum-mcp = "continuum_mcp.server:main"

[tool.setuptools.packages.find]
where = ["packages/memory_core", "packages/agent", "packages/mcp_server", "apps/api"]
include = ["continuum_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "packages/memory_core", "packages/agent", "packages/mcp_server", "apps/api", "evals"]
markers = [
    "unit: memory_core unit tests (no server)",
    "api: FastAPI TestClient API regression (no live server)",
    "e2e: Playwright browser regression (server + Chromium)",
    "eval: offline eval suite checks",
]
